cmake_minimum_required(VERSION 3.16)

add_library(
        GameObject
        STATIC
        GameObject.hpp
        GameObject.cpp
        Background.hpp
        Background.cpp
        Plant/Plant.hpp
        Plant/Plant.cpp
        Plant/Sunflower.hpp
        Plant/Sunflower.cpp
        Interface/SunProducer.hpp
        Interface/SunProducer.cpp
        PlantingSpot.hpp
        PlantingSpot.cpp
        Sun.hpp
        Sun.cpp
        Interface/Attacker.hpp
        Interface/Attacker.cpp
        HandHoldObject/HandHoldObject.cpp
        HandHoldObject/HandHoldObject.hpp
        HandHoldObject/Seed/Seed.cpp
        HandHoldObject/Seed/Seed.hpp
        HandHoldObject/Seed/SunflowerSeed.cpp
        HandHoldObject/Seed/SunflowerSeed.hpp
        HandHoldObject/Shovel.hpp
        HandHoldObject/Shovel.cpp
        HandHoldObject/Seed/CooldownMask.hpp
        HandHoldObject/Seed/CooldownMask.cpp
        HandHoldObject/Seed/PeashooterSeed.hpp
        HandHoldObject/Seed/PeashooterSeed.cpp
        HandHoldObject/Seed/WallnutSeed.hpp
        HandHoldObject/Seed/WallnutSeed.cpp
        HandHoldObject/Seed/CherryBombSeed.hpp
        HandHoldObject/Seed/CherryBombSeed.cpp
        HandHoldObject/Seed/RepeaterSeed.hpp
        HandHoldObject/Seed/RepeaterSeed.cpp
        Plant/Wallnut.hpp
        Plant/Wallnut.cpp
        Plant/PeaShooter.hpp
        Plant/PeaShooter.cpp
        Plant/CherryBomb.hpp
        Plant/CherryBomb.cpp
        Plant/Repeater.hpp
        Plant/Repeater.cpp
        Interface/Ash.hpp
        Interface/Ash.cpp
)

target_link_libraries(
        GameObject
        Framework
)

target_include_directories(
        GameObject
        PUBLIC
        ${CMAKE_SOURCE_DIR}/src/
        ${CMAKE_SOURCE_DIR}/src/Framework/
        ${CMAKE_SOURCE_DIR}/src/GameWorld/
        ${CMAKE_SOURCE_DIR}/src/GameObject/
)
